Use Java 5-compatible generics example
Co-authored-by: brunoborges <129743+brunoborges@users.noreply.github.com>