@@ -5,8 +5,8 @@ import java.util.*;
 /// Proof: raw-collections-to-generics
 /// Source: content/language/raw-collections-to-generics.yaml
 void main() {
-    List<String> names = new ArrayList<>();
+    List<String> names = new ArrayList();
     names.add("Duke");
 
-    String name = names.getFirst();
+    String name = names.get(0);
 }
